--- a/views/landing.ejs
+++ b/views/landing.ejs
@@ -1,5 +1,5 @@
 <%include parcials/header%>
-<h1>Landing Page fuck</h1>
+<h1>Landing Page </h1>
 <p>Welcome to YelpCamp</p>
 <a href="/campgrounds">View All Campgrounds</a>
 <%include parcials/footer%>
